Make gamestate randomness deterministic
- Update SerializableRandom to be @Derializable and public.
- Replace java.util.Random with SerializableRandom in Zone.
- Enforce deterministic actor update order in World by sorting by UUID.
- Transition AI, card effects, and deck logic to use Zone's RNG.
- Ensure OpenSimplexNoise uses SerializableRandom for deterministic terrain.
- Keep visual-only randomness (e.g. GrassTile variants) non-deterministic.
- Fix Java 8 compatibility (Stream.toList() -> .collect(Collectors.toList())).

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>